crates/excelx-derive/tests/ui/nested_option.stderr
error: nested Option fields are not supported
 --> tests/ui/nested_option.rs:6:12
  |
6 |     value: Option<Option<String>>,
  |            ^^^^^^^^^^^^^^^^^^^^^^
